<resources>
    <string name="app_name">Employee</string>
    <string name="action_settings">Settings</string>
    <string name="firstname">firstname</string>
    <string name="department">department</string>
    <string name="update">update</string>
    <string name="lastname">lastname</string>
    <string name="designation">designation</string>
    <string name="delete">delete</string>
    <string name="spinner_title">spinner_title</string>
    <string name="First_name">First Name:</string>
    <string name="first_name">first_name</string>
    <string name="last_nam">Last Name:</string>
    <string name="last_name">last_name</string>
    <string name="e_mail">E-mail:</string>
    <string name="email">email</string>
    <string name="Mobile_no">Mobile_no:</string>
    <string name="mobile_no">mobile_no</string>
    <string name="DOB">DOB:</string>
    <string name="dob">dob</string>
    <string name="Organization">Organization:</string>
    <string name="organization">Mobinius Technologies Pvt Ltd</string>
    <string name="Department">Department:</string>
    <string name="Designation">Designation</string>
    <string name="Address">Address:</string>
    <string name="address">address</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="UPDATE">UPDATE</string>
    <string name="Date">Enter Date</string>
    <string name="SET">SET</string>
    <string name="SUBMIT_DATE">SUBMIT_DATE</string>
    <string name="Invalid_first_name">Invalid First Name</string>

</resources>