<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"

    tools:context=".EmployeeEntryDetailsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/first_name_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/first_name_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/First_name"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/first_name_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="@dimen/ten_dp"
                android:textColorHint="@color/color_hint" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/first_name_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/last_name_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/last_nam"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/last_name_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="@dimen/ten_dp"
                android:textColorHint="@color/color_hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/last_name_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/email_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/e_mail"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/ten_dp"
                android:textColorHint="@color/color_hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobile_no_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/email_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/mobile_no_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/Mobile_no"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mobile_no_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6"
                android:hint="@string/mobile_no"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="15"
                android:padding="@dimen/ten_dp"
                android:textColorHint="@color/color_hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dob_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/mobile_no_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/dob_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/DOB"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dob_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6"
                android:padding="@dimen/ten_dp"
                android:text="@string/Date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/organisation_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/dob_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/organisation_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/Organization"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/organisation_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6"
                android:padding="@dimen/ten_dp"
                android:text="@string/organization" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/department_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/organisation_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/department_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/Department"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/department_spinner"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6"
                android:padding="@dimen/ten_dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/designation_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/department_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/designation_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/Designation"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/designation_spinner"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6"
                android:padding="@dimen/ten_dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/designation_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/address_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/Address"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/address_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:maxLines="3"
                android:minLines="3"
                android:padding="@dimen/ten_dp"
                android:textColorHint="@color/color_hint" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/SUBMIT" />

</RelativeLayout>