<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.prajna.employee.EmpDetailActivity">

    <TextView
        android:id="@+id/employee_heading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/ten_dp"
        android:gravity="center_horizontal"
        android:text="@string/First_name"
        android:textSize="@dimen/twenty_dp"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forty_five_dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/first_name_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/first_name_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/First_name"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/first_name_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/first_name_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/last_name_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/last_nam"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/last_name_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/last_name_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/email_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/e_mail"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mobile_no_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/email_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/mobile_no_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/Mobile_no"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mobile_no_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dob_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/mobile_no_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/dob_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/DOB"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dob_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/organisation_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/dob_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/organisation_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/Organization"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/organisation_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6"
                android:text="@string/organization" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/department_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/organisation_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/department_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/Department"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/department_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/designation_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/department_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/designation_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/Designation"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/designation_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_five_dp"
            android:layout_below="@+id/designation_layout"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/address_view"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/Address"
                android:textSize="@dimen/fifteen_dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/sixty_dp"
                android:layout_weight=".6" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>